manifests/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../week-2/docker-compose.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    app: db
  name: db
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    app: db
