manifests/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../week-2/docker-compose.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    app: flask
  name: flask
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    app: flask
